# SniperPro

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  inject_data.py  pyproject.toml  requirements.txt  run.py  run_migration.py  success_page.html  test_db.py  test_scraper.py
backend/alembic/: env.py
backend/alembic/versions/: 26152d44c7b6_initial_migration.py
backend/app/: main.py
backend/app/analytics/: __init__.py  fake_sale_detector.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: alerts.py  analytics.py  products.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: product.py
backend/app/scraper/: amazon.py  base.py  factory.py  flipkart.py  myntra.py  utils.py
backend/app/services/: notification.py
backend/app/worker/: __init__.py  celery_app.py  tasks.py
backend/docker/postgres/: init-pg-hba.sh  pg_hba.conf
frontend-react/: package-lock.json  package.json  tailwind.config.js
frontend-react/src/: App.jsx  index.css  main.jsx
frontend-react/src/components/: AddProduct.jsx  AnalyticsModal.jsx  BuyGauge.jsx  Navbar.jsx  PriceChart.jsx  ProductCard.jsx  StatsGrid.jsx
frontend-react/src/pages/: Dashboard.jsx
frontend-react/src/services/: api.js
