[project]
name = "price-drop-sniper"
version = "0.1.0"
description = "A price tracking application with scraping and notifications."
authors = [
  { name="Price Drop Sniper Team", email="dev@pricedropsniper.com" },
]
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "celery[redis]>=5.3.6",
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.1.0",
    "requests>=2.31.0",
    "alembic>=1.13.1",
    "greenlet>=3.0.0",
    "pandas>=2.1.0",
    "plotly>=5.18.0",
    "streamlit>=1.30.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
